# hud

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  check-symbols.sh  cleanup.sh  deny.toml  enable_stack_traces.sh  run-profiler-debug.sh  run-profiler.sh  test.sh  test_trace.sh  trace.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  EXPORTS.md  TROUBLESHOOTING.md  TUI.md  TUNING.md
hud/: Cargo.toml
hud-common/: Cargo.toml
hud-common/src/: lib.rs
hud-ebpf/: Cargo.toml
hud-ebpf/src/: main.rs
hud/examples/: README.md  demo-server.rs  load.sh  test-async-app.rs  test-single-thread.rs
hud/src/: classification.rs  lib.rs  main.rs  preflight.rs  process_lookup.rs  trace_data.rs  tui.rs
hud/src/analysis/: hotspot_analyzer.rs  mod.rs
hud/src/cli/: args.rs  mod.rs
hud/src/domain/: errors.rs  mod.rs  types.rs
hud/src/export/: chrome_trace.rs  mod.rs  trace_event.rs
hud/src/profiling/: cpu_utils.rs  diagnostics.rs  ebpf_setup.rs  event_display.rs  event_processor.rs  mod.rs  stack_resolver.rs  worker_discovery.rs  worker_sampling.rs
hud/src/symbolization/: memory_maps.rs  mod.rs  symbolizer.rs
hud/src/tui/: hotspot.rs  layout.rs  status.rs  theme.rs  timeline.rs  workers.rs
hud/tests/: test_hotspot_filtering.rs  test_symbolizer.rs  test_trace_export.rs  test_trace_parsing.rs
hud/tests/fixtures/: simple_trace.json
runtime-scope/: Cargo.toml
runtime-scope-common/: Cargo.toml
runtime-scope-common/src/: lib.rs
runtime-scope-ebpf/: Cargo.toml
runtime-scope-ebpf/src/: main.rs
runtime-scope/examples/: README.md  test-async-app.rs  test-single-thread.rs
runtime-scope/src/: lib.rs  main.rs  symbolizer.rs  trace_exporter.rs  tui.rs
runtime-scope/src/analysis/: hotspot_analyzer.rs  mod.rs
runtime-scope/src/cli/: args.rs  mod.rs
runtime-scope/src/domain/: errors.rs  mod.rs
runtime-scope/src/export/: chrome_trace.rs
runtime-scope/src/profiling/: ebpf_setup.rs  event_display.rs  mod.rs  stack_resolver.rs  worker_discovery.rs
runtime-scope/src/tui/: hotspot.rs  timeline.rs  workers.rs
runtime-scope/tests/: test_hotspot_filtering.rs  test_symbolizer.rs  test_trace_export.rs  test_trace_parsing.rs
xtask/: Cargo.toml
xtask/src/: main.rs
