[workspace]
members = [
    "runtime-scope",
    "runtime-scope-ebpf",
    "runtime-scope-common",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
anyhow = "1"
tokio = { version = "1.41", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
