[workspace]
members = [
    "hud",
    "hud-ebpf",
    "hud-common",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
anyhow = "1"
tokio = { version = "1.41", features = ["full"] }

[profile.dev]
# Force frame pointers for better stack traces
[profile.dev.package."*"]
opt-level = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
# Enable debug symbols for stack trace resolution
debug = true
