[package]
name = "hud-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { version = "0.1", default-features = false }
aya-log-ebpf = { version = "0.1", default-features = false }
hud-common = { path = "../hud-common" }

[[bin]]
name = "hud"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
