[package]
name = "runtime-scope"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
runtime-scope-common = { path = "../runtime-scope-common", features = ["user"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
futures = "0.3"
# Symbol resolution for stack traces
addr2line = "0.24"
object = { version = "0.36", default-features = false, features = ["read_core", "elf"] }
rustc-demangle = "0.1"
gimli = "0.31"
# Chrome trace export
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TUI for intuitive visualization
ratatui = "0.29"
crossterm = "0.28"
